--- a/frontend/src/pages/index/_header.pug
+++ b/frontend/src/pages/index/_header.pug
@@ -1,7 +1,7 @@
 header.header
     ._container._row._s
         ._col-12._col-lg-10._offset-lg-1._row._ptb-n.header__logoWpapper
-            img.header__logo(src="../svg/logo.svg" alt="3D Dental")
+            img.header__logo(src="svg/logo.svg" alt="3D Dental")
         h1._col-12._col-lg-10._offset-lg-1.header__caption
             | Откройте свой собственный
             br
@@ -30,7 +30,7 @@ header.header
                 span.header__text-small
                     | взрослые и&nbsp;дети от&nbsp;6&nbsp;лет
         ._col-12._col-lg-10._offset-lg-1._ptb-n.header__buttonDownload
-            button.button.header__btn
+            label.button.header__btn(for="modal-close")
                 i._btn-ico
                 | Скачать презентацию
         
