--- a/frontend/src/pages/layout/_footer.pug
+++ b/frontend/src/pages/layout/_footer.pug
@@ -18,6 +18,12 @@ footer.footer._s
             button.button.footer__btn(type="send")
                 i._btn-ico
                 | Связаться с&nbsp;франчайзером
+            br
+            .form-group(style="margin-left: 14px;margin-bottom: 11px;display: flex;align-items: center;")
+                input#check(type="checkbox" checked="checked" required="required" style="margin-right: 6px;width: 15px;height: 15px;margin-top: -2px;")
+                label._s(for="check")
+                    | Даю согласие на&nbsp;обработку&nbsp;
+                    a.link._s(href="/privacy-policy/") персональных данных
         ._col-12._col-md-6._offset-lg-1.footer__list
             .footer__item Office.dent@bk.ru
             .footer__item 8-701-141-71-38
