--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -35,14 +35,14 @@ body {
 }
 
 .link {
-	display: block;
+	display: inline-block;
 	text-decoration: none;
 	outline: none;
 	color: $p-text-color;
 	&:hover,
 	&:active,
 	&:focus {
-
+		color: $p-active-color;
 	}
 }
 
@@ -149,3 +149,43 @@ img {
 @import "media";
 
 @import "layout/main";
+
+.modal{
+	position:fixed;
+	z-index:100;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+}
+.modal,.modal__checkbox{
+	display:none
+}
+.modal__checkbox:checked+.modal{
+	display:flex;
+	align-items:center;
+}
+.modal__form-box{
+	max-width:410px;
+	margin:auto;
+	background-color: $p-color;
+	border-radius: 6px;
+}
+.modal__bg{
+	position:absolute;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,.6)
+}
+.modal__close{
+	position:absolute;
+	top:15px;
+	right:15px;
+	width:50px;
+	height:50px;
+	border-radius:50%;
+	background-color:#d3ab72;
+	background-image:url(../img/close.png);
+	background-repeat:no-repeat;
+	background-position:50%
+}
